WomenCrime Model Completed

--- a/static/style.css
+++ b/static/style.css
@@ -96,7 +96,7 @@ header a:hover{
 
 #section2{
 	height:60%;
-	background-image: url("/static/images/p.jpg");
+	background-image: url("/static/images/bigData1.jpg");
 	background-size: cover;
 	background-attachment: fixed;	
 }
