--- a/templates/pred.html
+++ b/templates/pred.html
@@ -53,12 +53,64 @@
 		  	                <form action="women.html" method="POST">
                             <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
                             <select name = "Predict_Year" style="padding-top:20px;">
-                            <option value="2015"><h2>2015</h2> </option>
-                            <option value="2016"><h2>2016</h2> </option>
-                            <option value="2017"><h2>2017</h2> </option>
-                            <option value="2018"><h2>2018</h2> </option>
-                            <option value="2019"><h2>2019</h2> </option>
+                                <option value="2017"><h2>2017</h2> </option>
+                                <option value="2018"><h2>2018</h2> </option>
+                                <option value="2019"><h2>2019</h2> </option>
+                                <option value="2020"><h2>2020</h2> </option>
                             </select>
+
+                            <select name = "C_Type" style="padding-top:20px;">
+                                <option value="RAPE"><h2>RAPE</h2> </option>
+                                <option value="KIDNAPPING & ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
+                                <option value="DOWRY DEATH"><h2>DOWRY DEATH</h2> </option>
+                                <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
+                                <option value="INSULT TO THE MODESTY OF WOMEN"><h2>INSULT TO THE MODESTY OF WOMEN</h2> </option>
+                                <option value="CRUELTY BY HUSBAND OR RELATIVES"><h2>CRUELTY BY HUSBAND OR RELATIVES</h2> </option>
+                                <option value="IMMORAL TRAFFIC(PREVENTION)ACT"><h2>IMMORAL TRAFFIC(PREVENTION)ACT</h2> </option>
+                                <option value="INDECENT REPRESENTATION OF WOMEN(PREVENTION)ACT"><h2>INDECENT REPRESENTATION OF WOMEN(PREVENTION)ACT</h2> </option>    
+                                <option value="TOTAL CRIMES AGAINST WOMEN"><h2>TOTAL CRIMES AGAINST WOMEN</h2> </option> 
+                            </select>
+
+                            <select name = "state" style="padding-top:20px;">
+                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
+                                <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
+                                <option value="Assam"><h2>Assam</h2> </option>
+                                <option value="Bihar"><h2>Bihar</h2> </option>
+                                <option value="Chhattisgarh"><h2>Chhattisgarh</h2> </option>
+                                <option value="Goa"><h2>Goa</h2> </option>
+                                <option value="Gujarat"><h2>Gujarat</h2> </option>
+                                <option value="Haryana"><h2>Haryana</h2> </option>
+                                <option value="Himachal Pradesh"><h2>Himachal Pradesh</h2> </option>
+                                <option value="Jammu & Kashmir"><h2>Jammu & Kashmir</h2> </option>
+                                <option value="Jharkhand"><h2>Jharkhand</h2> </option>
+                                <option value="Karnataka"><h2>Karnataka</h2> </option>
+                                <option value="Kerala"><h2>Kerala</h2> </option>
+                                <option value="Madhya Pradesh"><h2>Madhya Pradesh</h2> </option>
+                                <option value="Maharashtra"><h2>Maharashtra</h2> </option>
+                                <option value="Manipur"><h2>Manipur</h2> </option>
+                                <option value="Meghalaya"><h2>Meghalaya</h2> </option>
+                                <option value="Mizoram"><h2>Mizoram</h2> </option>
+                                <option value="Nagaland"><h2>Nagaland</h2> </option>
+                                <option value="Odisha"><h2>Odisha</h2> </option>
+                                <option value="Punjab"><h2>Punjab</h2> </option>
+                                <option value="Rajasthan"><h2>Rajasthan</h2> </option>
+                                <option value="Sikkim"><h2>Sikkim</h2> </option>
+                                <option value="Tamil Nadu"><h2>Tamil Nadu</h2> </option>
+                                <option value="Tripura"><h2>Tripura</h2> </option>
+                                <option value="Uttar Pradesh"><h2>Uttar Pradesh</h2> </option>
+                                <option value="Uttarakhand"><h2>Uttarakhand</h2> </option>
+                                <option value="West Bengal"><h2>West Bengal</h2> </option>
+                                <option value="A&N Islands"><h2>A&N Islands</h2> </option>
+                                <option value="Chandigarh"><h2>Chandigarh</h2> </option>
+                                <option value="D&N Haveli"><h2>D&N Haveli</h2> </option>
+                                <option value="Daman & Diu"><h2>Daman & Diu</h2> </option>
+                                <option value="Delhi UT"><h2>Delhi UT</h2> </option>
+                                <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
+                                <option value="Puducherry"><h2>Puducherry</h2> </option>
+
+                                </select>
+
 		  	                <br>
 		  	                <input type="submit" value="Submit">
                             </form>
