--- a/templates/women.html
+++ b/templates/women.html
@@ -8,13 +8,17 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title> Crime in India Bar Chart</title>
+	<title>{{C_type}} in {{state}} upto year {{year}} </title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"> 
 
 </head>
 
 <body>
+	<center>
+		<br>
+		<h3>"{{C_type}}" Cases in {{state}} upto Year {{year}}</h3>
+	</center>
 	<div class="container">
 		<canvas id="myChart"></canvas>
 	</div>
@@ -22,30 +26,30 @@
 
 <script>
 	var ctx = document.getElementById("myChart").getContext('2d');
+	var counts = {{pred_data}};
+	var years = {{ years|safe }};
+	console.log(counts)
 	var myChart = new Chart(ctx, {
   	type: 'bar',
   	data: {
-        labels: ["2001", "2002", "2003", "2004", "2005", "2006", "2007", "2008", "2009", "2010", "2011", "2012", "2013", "2014"],
+        labels:years,
     	   datasets: [{
             type: 'bar',
             label: 'Rape',
-            data: [15694, 15970, 15357, 17682, 17701, 18725, 20139, 21001, 20928, 21665,
-            23634, 24217, 33707, 38678],
+            data: counts,
             backgroundColor: 'grey'
            },{
             type: 'line',
             label: 'Rape',
             fill: false,
             borderWidth: 4,
-            data: [15694, 15970, 15357, 17682, 17701, 18725, 20139, 21001, 20928, 21665,
-            23634, 24217, 33707, 38678],
+            data: counts,
             borderColor: 'red'
            }]
   	  },
 	options:{
 		title:{
 			display:true,
-			text: 'Crime against women in India',
 			fontSize:25
 		},
 		legend:{
@@ -66,8 +70,12 @@
 {% for data in data %}
 {{ data }}
 <br>
+<br>
 {% endfor %}
-
+{{pred_data}}
+<br>
+<br>
+{{years}}
 </body>
 
 </html>
