--- a/templates/vis.html
+++ b/templates/vis.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<title>Crime Prediction System | Visualizations</title>
         <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="/static/accordion.css">
         <link rel="stylesheet" href="/static/animate.css">
         
         
@@ -41,6 +42,9 @@
 <section id="section12">
     <div class="container">
             <h1>VISUALIZATIONS</h1>
+            <a href="womenViz.html">
+                <h3>1) Total Crime on Women with respect to Population of an Area.</h3>
+            </a> 
     </div>
 </section>
         
