--- a/templates/pred.html
+++ b/templates/pred.html
@@ -15,13 +15,13 @@
 	<body>
 
 
-		<header>
+		<header style="height: 120px;">
             
             <div class="container">
-                <h1>
-                    <span class="highlight">Crime</span> Prediction System
-                </h1>
-                
+                <h1 style="font-size: 50px;">
+                    <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "90" width = "115" alt="Banner Image"/>
+                     Indian <span class="highlight">Crime</span> Analysis
+                </h1>                
                 <nav>
                 <ul>
                     <li><a href="home.html">HOME</a></li> 
@@ -195,27 +195,6 @@
                       </center>    
                 </section>
             
-                <section id="menu3">
-                    <a href="#menu3">CRIME AGAINST SENIOR CITIZENS</a>
-                    <p>The women sector is very prone to be the victims of most of the crimes taking place in India. Following predictions are categorized according to the years of occurence. Please select the desired option to view the results.The notion that acts such as murder, rape and theft are to be prohibited exists worldwide.[5] What precisely is a criminal offence is defined by criminal law of each country. While many have a catalogue of crimes called the criminal code, in some common law countries no such comprehensive statute exists.
-
-                        The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
-                        <center>
-                                <form action="SenCitizen.html" method="POST">
-                              <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
-  
-                              <select name = "Predict_Year" style="padding-top:20px;">
-                              <option value="2015"><h2>2015</h2> </option>
-                              <option value="2016"><h2>2016</h2> </option>
-                              <option value="2017"><h2>2017</h2> </option>
-                              <option value="2018"><h2>2018</h2> </option>
-                              <option value="2019"><h2>2019</h2> </option>
-                              </select>
-                                <br>
-                                <input type="submit" value="Submit">
-                              </form>
-                      </center>    
-                </section>
             
                 <section id="menu4">
                     <a href="#menu4">IPC CRIMES</a>
@@ -223,16 +202,81 @@
 
                         The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
                         <center>
-                                <form action="IPC.html" method="POST">
+                              <form action="ipc.html" method="POST">
                               <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
-                              <option value="2015"><h2>2015</h2> </option>
-                              <option value="2016"><h2>2016</h2> </option>
-                              <option value="2017"><h2>2017</h2> </option>
-                              <option value="2018"><h2>2018</h2> </option>
-                              <option value="2019"><h2>2019</h2> </option>
+                                <option value="2017"><h2>2017</h2> </option>
+                                <option value="2018"><h2>2018</h2> </option>
+                                <option value="2019"><h2>2019</h2> </option>
+                                <option value="2020"><h2>2020</h2> </option>
                               </select>
+
+                            <select name = "C_Type" style="padding-top:20px;">
+                                <option value="MURDER"><h2>MURDER</h2> </option>
+                                <option value="ATTEMPT TO COMMIT MURDER"><h2>ATTEMPT TO COMMIT MURDER</h2> </option>
+                                <option value="CULPABLE HOMICIDE NOT AMOUNTING TO MURDER"><h2>CULPABLE HOMICIDE NOT AMOUNTING TO MURDER</h2> </option>
+                                <option value="RAPE"><h2>RAPE</h2> </option>
+                                <option value="KIDNAPPING & ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
+                                <option value="DACOITY"><h2>DACOITY</h2> </option>
+                                <option value="PREPARATION & ASSEMBLY FOR DACOITY"><h2>PREPARATION & ASSEMBLY FOR DACOITY</h2> </option>
+                                <option value="ROBBERY"><h2>ROBBERY</h2> </option>
+                                <option value="BURGLARY"><h2>BURGLARY</h2> </option>
+                                <option value="THEFT"><h2>THEFT</h2> </option>
+                                <option value="RIOTS"><h2>RIOTS</h2> </option>
+                                <option value="CRIMINAL BREACH OF TRUST"><h2>CRIMINAL BREACH OF TRUST</h2> </option>
+                                <option value="CHEATING"><h2>CHEATING</h2> </option>
+                                <option value="COUNTERFEITING"><h2>COUNTERFEITING</h2> </option>
+                                <option value="ARSON"><h2>ARSON</h2> </option>
+                                <option value="HURT/GREVIOUS HURT"><h2>HURT/GREVIOUS HURT</h2> </option>
+                                <option value="DOWRY DEATH"><h2>DOWRY DEATH</h2> </option>
+                                <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
+                                <option value="INSULT TO THE MODESTY OF WOMEN"><h2>INSULT TO THE MODESTY OF WOMEN</h2> </option>
+                                <option value="CRUELTY BY HUSBAND OR RELATIVES"><h2>CRUELTY BY HUSBAND OR RELATIVES</h2> </option>
+                                <option value="CAUSING DEATH BY NEGLIGENCE"><h2>CAUSING DEATH BY NEGLIGENCE</h2> </option>
+                                <option value="OTHER IPC CRIMES"><h2>OTHER IPC CRIMES</h2> </option>    
+                                <option value="TOTAL IPC CRIMES"><h2>TOTAL IPC CRIMES</h2> </option> 
+                            </select>
+
+                            <select name = "state" style="padding-top:20px;">
+                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
+                                <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
+                                <option value="Assam"><h2>Assam</h2> </option>
+                                <option value="Bihar"><h2>Bihar</h2> </option>
+                                <option value="Chhattisgarh"><h2>Chhattisgarh</h2> </option>
+                                <option value="Goa"><h2>Goa</h2> </option>
+                                <option value="Gujarat"><h2>Gujarat</h2> </option>
+                                <option value="Haryana"><h2>Haryana</h2> </option>
+                                <option value="Himachal Pradesh"><h2>Himachal Pradesh</h2> </option>
+                                <option value="Jammu & Kashmir"><h2>Jammu & Kashmir</h2> </option>
+                                <option value="Jharkhand"><h2>Jharkhand</h2> </option>
+                                <option value="Karnataka"><h2>Karnataka</h2> </option>
+                                <option value="Kerala"><h2>Kerala</h2> </option>
+                                <option value="Madhya Pradesh"><h2>Madhya Pradesh</h2> </option>
+                                <option value="Maharashtra"><h2>Maharashtra</h2> </option>
+                                <option value="Manipur"><h2>Manipur</h2> </option>
+                                <option value="Meghalaya"><h2>Meghalaya</h2> </option>
+                                <option value="Mizoram"><h2>Mizoram</h2> </option>
+                                <option value="Nagaland"><h2>Nagaland</h2> </option>
+                                <option value="Odisha"><h2>Odisha</h2> </option>
+                                <option value="Punjab"><h2>Punjab</h2> </option>
+                                <option value="Rajasthan"><h2>Rajasthan</h2> </option>
+                                <option value="Sikkim"><h2>Sikkim</h2> </option>
+                                <option value="Tamil Nadu"><h2>Tamil Nadu</h2> </option>
+                                <option value="Tripura"><h2>Tripura</h2> </option>
+                                <option value="Uttar Pradesh"><h2>Uttar Pradesh</h2> </option>
+                                <option value="Uttarakhand"><h2>Uttarakhand</h2> </option>
+                                <option value="West Bengal"><h2>West Bengal</h2> </option>
+                                <option value="A&N Islands"><h2>A&N Islands</h2> </option>
+                                <option value="Chandigarh"><h2>Chandigarh</h2> </option>
+                                <option value="D&N Haveli"><h2>D&N Haveli</h2> </option>
+                                <option value="Daman & Diu"><h2>Daman & Diu</h2> </option>
+                                <option value="Delhi UT"><h2>Delhi UT</h2> </option>
+                                <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
+                                <option value="Puducherry"><h2>Puducherry</h2> </option>
+
+                                </select>
                                 <br>
                                 <input type="submit" value="Submit">
                               </form>
@@ -245,16 +289,80 @@
 
                         The state (government) has the power to severely restrict one's liberty for committing a crime. In modern societies, there are procedures to which investigations and trials must adhere. If found guilty, an offender may be sentenced to a form of reparation such as a community sentence, or, depending on the nature of their offence, to undergo imprisonment, life imprisonment or, in some jurisdictions, execution.</p>
                         <center>
-                                <form action="SLL.html" method="POST">
+                                <form action="sll.html" method="POST">
                               <h3 style = "font-family:verdana; padding-left: 0%;float: left;">Choose Year of Prediction:-</h3>
   
                               <select name = "Predict_Year" style="padding-top:20px;">
-                              <option value="2015"><h2>2015</h2> </option>
-                              <option value="2016"><h2>2016</h2> </option>
                               <option value="2017"><h2>2017</h2> </option>
                               <option value="2018"><h2>2018</h2> </option>
                               <option value="2019"><h2>2019</h2> </option>
+                              <option value="2020"><h2>2020</h2> </option>
                               </select>
+
+                              <select name = "C_Type" style="padding-top:20px;">
+                                <option value="ARMS ACT, 1959"><h2>ARMS ACT, 1959</h2> </option>
+                                <option value="NARCOTIC DRUGS & PSYCHOTROPIC SUBSTANCES ACT, 1985"><h2>NARCOTIC DRUGS & PSYCHOTROPIC SUBSTANCES ACT, 1985</h2> </option>
+                                <option value="GAMBLING ACT, 1867"><h2>GAMBLING ACT, 1867</h2> </option>
+                                <option value="EXCISE ACT, 1944"><h2>EXCISE ACT, 1944</h2> </option>
+                                <option value="PROHIBITION ACT"><h2>PROHIBITION ACT</h2> </option>
+                                <option value="EXPLOSIVES & EXPLOSIVE SUBSTANCES ACT"><h2>EXPLOSIVES & EXPLOSIVE SUBSTANCES ACT</h2> </option>
+                                <option value="IMMORAL TRAFFIC(P) ACT, 1956"><h2>IMMORAL TRAFFIC(P) ACT, 1956</h2> </option>
+                                <option value="INDIAN RAILWAYS ACT, 1989"><h2>INDIAN RAILWAYS ACT, 1989</h2> </option>
+                                <option value="REGISTRATION OF FOREIGNERS ACT, 1939"><h2>REGISTRATION OF FOREIGNERS ACT, 1939</h2> </option>
+                                <option value="PROTECTION OF CIVIL RIGHTS ACT, 1955"><h2>PROTECTION OF CIVIL RIGHTS ACT, 1955</h2> </option>
+                                <option value="INDIAN PASSPORT ACT, 1967"><h2>INDIAN PASSPORT ACT, 1967</h2> </option>
+                                <option value="ESSENTIAL COMMODITIES ACT, 1955"><h2>ESSENTIAL COMMODITIES ACT, 1955</h2> </option>
+                                <option value="ANTIQUITIES & ART TREASURES ACT, 1972"><h2>ANTIQUITIES & ART TREASURES ACT, 1972</h2> </option>
+                                <option value="DOWRY PROHIBITION ACT, 1961"><h2>DOWRY PROHIBITION ACT, 1961</h2> </option>
+                                <option value="PROHIBITION OF CHILD MARRIAGE ACT, 2006"><h2>PROHIBITION OF CHILD MARRIAGE ACT, 2006</h2> </option>
+                                <option value="HURT/GREVIOUS HURT"><h2>HURT/GREVIOUS HURT</h2> </option>
+                                <option value="INDECENT REP. OF WOMEN(P) ACT, 1986"><h2>INDECENT REP. OF WOMEN(P) ACT, 1986</h2> </option>
+                                <option value="COPYRIGHT ACT, 1957"><h2>COPYRIGHT ACT, 1957</h2> </option>
+                                <option value="SC/ST (PREVENTION OF ATTROCITIES) ACT, 1989"><h2>SC/ST (PREVENTION OF ATTROCITIES) ACT, 1989</h2> </option>
+                                <option value="FOREST ACT, 1927"><h2>FOREST ACT, 1927</h2> </option>
+                                <option value="OTHER IPC CRIMES"><h2>OTHER SLL CRIMES</h2> </option>    
+                                <option value="TOTAL IPC CRIMES"><h2>TOTAL SLL CRIMES</h2> </option> 
+                            </select>
+
+                            <select name = "state" style="padding-top:20px;">
+                                <option value="INDIA"><h2>*INDIA*</h2> </option>
+                                <option value="Andhra Pradesh"><h2>Andhra Pradesh</h2> </option>
+                                <option value="Arunachal Pradesh"><h2>Arunachal Pradesh</h2> </option>
+                                <option value="Assam"><h2>Assam</h2> </option>
+                                <option value="Bihar"><h2>Bihar</h2> </option>
+                                <option value="Chhattisgarh"><h2>Chhattisgarh</h2> </option>
+                                <option value="Goa"><h2>Goa</h2> </option>
+                                <option value="Gujarat"><h2>Gujarat</h2> </option>
+                                <option value="Haryana"><h2>Haryana</h2> </option>
+                                <option value="Himachal Pradesh"><h2>Himachal Pradesh</h2> </option>
+                                <option value="Jammu & Kashmir"><h2>Jammu & Kashmir</h2> </option>
+                                <option value="Jharkhand"><h2>Jharkhand</h2> </option>
+                                <option value="Karnataka"><h2>Karnataka</h2> </option>
+                                <option value="Kerala"><h2>Kerala</h2> </option>
+                                <option value="Madhya Pradesh"><h2>Madhya Pradesh</h2> </option>
+                                <option value="Maharashtra"><h2>Maharashtra</h2> </option>
+                                <option value="Manipur"><h2>Manipur</h2> </option>
+                                <option value="Meghalaya"><h2>Meghalaya</h2> </option>
+                                <option value="Mizoram"><h2>Mizoram</h2> </option>
+                                <option value="Nagaland"><h2>Nagaland</h2> </option>
+                                <option value="Odisha"><h2>Odisha</h2> </option>
+                                <option value="Punjab"><h2>Punjab</h2> </option>
+                                <option value="Rajasthan"><h2>Rajasthan</h2> </option>
+                                <option value="Sikkim"><h2>Sikkim</h2> </option>
+                                <option value="Tamil Nadu"><h2>Tamil Nadu</h2> </option>
+                                <option value="Tripura"><h2>Tripura</h2> </option>
+                                <option value="Uttar Pradesh"><h2>Uttar Pradesh</h2> </option>
+                                <option value="Uttarakhand"><h2>Uttarakhand</h2> </option>
+                                <option value="West Bengal"><h2>West Bengal</h2> </option>
+                                <option value="A&N Islands"><h2>A&N Islands</h2> </option>
+                                <option value="Chandigarh"><h2>Chandigarh</h2> </option>
+                                <option value="D&N Haveli"><h2>D&N Haveli</h2> </option>
+                                <option value="Daman & Diu"><h2>Daman & Diu</h2> </option>
+                                <option value="Delhi UT"><h2>Delhi UT</h2> </option>
+                                <option value="Lakshadweep"><h2>Lakshadweep</h2> </option>
+                                <option value="Puducherry"><h2>Puducherry</h2> </option>
+
+                                </select>
                                 <br>
                                 <input type="submit" value="Submit">
                               </form>
@@ -268,8 +376,9 @@
     
 
 
+
         <footer>
-			<p>Crime Prediction System, Copyright &copy; 2018</p>
+			<p>Indian Crime Analysis, Copyright &copy; 2018</p>
 		</footer>
 	</body>
 
