--- a/templates/stats.html
+++ b/templates/stats.html
@@ -13,12 +13,13 @@
 	<body>
 
 
-		<header>
+		<header style="height: 120px;">
             
             <div class="container">
-                <h1>
-                    <span class="highlight">Crime</span> Prediction System
-                </h1>
+                <h1 style="font-size: 50px;">
+                    <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "90" width = "115" alt="Banner Image"/>
+                     Indian <span class="highlight">Crime</span> Analysis
+                </h1> 
                 
                 <nav>
                 <ul>
