--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@ body{
 
 /* Global */
 .container{
-	width:80%;
+	width:100%;
 	margin:auto;
 	overflow:hidden;
 }
@@ -24,8 +24,6 @@ ul{
 	margin:0;
 	padding:0;
 }
-
-
 
 
 
@@ -51,7 +49,9 @@ header a{
 }
 
 header h1{
+	position: relative;
 	float: left;
+	padding: 30px;
 	margin-top: 0px;
 	margin-left: 0px;
 	
@@ -66,7 +66,7 @@ header li{
 
 header nav{
 	float: right;
-	margin-top:10px;
+	margin-top:30px;
 }
 
 header .highlight, header .current a{
