--- a/templates/vis.html
+++ b/templates/vis.html
@@ -14,13 +14,13 @@
 	<body>
 
 
-		<header>
+		<header style="height: 120px;">
             
             <div class="container">
-                <h1>
-                    <span class="highlight">Crime</span> Prediction System
-                </h1>
-                
+                <h1 style="font-size: 50px;">
+                    <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "90" width = "115" alt="Banner Image"/>
+                     Indian <span class="highlight">Crime</span> Analysis
+                </h1>                
                 <nav>
                 <ul>
                     <li><a href="home.html">HOME</a></li> 
@@ -53,7 +53,7 @@
 
 
         <footer>
-			<p>Crime Prediction System, Copyright &copy; 2018</p>
+			<p>Indian Crime Analysis, Copyright &copy; 2018</p>
 		</footer>
 	</body>
 
