UI Changed & data suitable statement added

--- a/templates/pred.html
+++ b/templates/pred.html
@@ -217,9 +217,9 @@
                                 <option value="ATTEMPT TO COMMIT MURDER"><h2>ATTEMPT TO COMMIT MURDER</h2> </option>
                                 <option value="CULPABLE HOMICIDE NOT AMOUNTING TO MURDER"><h2>CULPABLE HOMICIDE NOT AMOUNTING TO MURDER</h2> </option>
                                 <option value="RAPE"><h2>RAPE</h2> </option>
-                                <option value="KIDNAPPING & ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
+                                <option value="KIDNAPPING and ABDUCTION"><h2>KIDNAPPING & ABDUCTION</h2> </option>
                                 <option value="DACOITY"><h2>DACOITY</h2> </option>
-                                <option value="PREPARATION & ASSEMBLY FOR DACOITY"><h2>PREPARATION & ASSEMBLY FOR DACOITY</h2> </option>
+                                <option value="PREPARATION AND ASSEMBLY FOR DACOITY"><h2>PREPARATION & ASSEMBLY FOR DACOITY</h2> </option>
                                 <option value="ROBBERY"><h2>ROBBERY</h2> </option>
                                 <option value="BURGLARY"><h2>BURGLARY</h2> </option>
                                 <option value="THEFT"><h2>THEFT</h2> </option>
