21-03-2018 Data Predictable or not added!

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
             <div class = "box3">
                 <nav>
                     <ul>
-                        <li> <a href="#section8">ABOUT</a> </li> 
+                        <li> <a href="About.html">ABOUT</a> </li> 
                         <li><a href="#section5">SERVICES</a> </li> 
                         <li class="current"><a href="/home.html">HOME</a> </li>
                     </ul>              
