--- a/templates/pred.html
+++ b/templates/pred.html
@@ -232,7 +232,7 @@
                                 <option value="DOWRY"><h2>DOWRY</h2> </option>
                                 <option value="ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY"><h2>ASSAULT ON WOMEN WITH INTENT TO OUTRAGE HER MODESTY</h2> </option>
                                 <option value="INSULT TO THE MODESTY OF WOMEN"><h2>INSULT TO THE MODESTY OF WOMEN</h2> </option>
-                                <option value="CRUELTY BY HUSBAND OR RELATIVES"><h2>CRUELTY BY HUSBAND OR RELATIVES</h2> </option>
+                                <option value="CRUELTY BY HUSBAND OR HIS RELATIVES"><h2>CRUELTY BY HUSBAND OR HIS RELATIVES</h2> </option>
                                 <option value="CAUSING DEATH BY NEGLIGENCE"><h2>CAUSING DEATH BY NEGLIGENCE</h2> </option>
                                 <option value="OTHER IPC CRIMES"><h2>OTHER IPC CRIMES</h2> </option>    
                                 <option value="TOTAL IPC CRIMES"><h2>TOTAL IPC CRIMES</h2> </option> 
