--- a/templates/vis.html
+++ b/templates/vis.html
@@ -14,21 +14,21 @@
 	<body>
 
 
-		<header style="height: 120px;">
-            
-            <div class="container">
-                <h1 style="font-size: 50px;">
-                    <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "90" width = "115" alt="Banner Image"/>
-                     Indian <span class="highlight">Crime</span> Analysis
-                </h1>                
+		<header class = "header1">
+            <div class = "box1">
+                <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/>
+            </div>
+            <div class = "box2">
+                <h1>Indian <span class="highlight">Crime</span> Analysis</h1>
+            </div>
+            <div class = "box3">
                 <nav>
-                <ul>
-                    <li><a href="home.html">HOME</a></li> 
-                    <li><a href="#">ABOUT</a></li> 
-                    <li class="current"><a href="#">SERVICES</a></li> 
-                </ul>              
+                    <ul>
+                        <li> <a href="About.html">ABOUT</a> </li> 
+                        <li><a href="#section5">SERVICES</a> </li> 
+                        <li class="current"><a href="/home.html">HOME</a> </li>
+                    </ul>              
                 </nav>
-
             </div>
         </header>
 
