Final Kachra Kadhla

--- a/templates/About.html
+++ b/templates/About.html
@@ -12,22 +12,23 @@
          
 	<body>
         <header class = "header1">
-            <div class = "box1">
-                <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/>
-            </div>
-            <div class = "box2">
-                <h1>Indian <span class="highlight">Crime</span> Analysis</h1>
-            </div>
-            <div class = "box3">
-                <nav>
-                    <ul>
-                        <li> <a href="#section8">ABOUT</a> </li> 
-                        <li><a href="#section5">SERVICES</a> </li> 
-                        <li class="current"><a href="/home.html">HOME</a> </li>
-                    </ul>              
-                </nav>
-            </div>
-        </header>
+                <div class = "box1">
+                    <img src="{{url_for('static', filename='images/logo_trial.png')}}" height = "115vh" width = "90%" alt="Banner Image"/>
+                </div>
+                <div class = "box2">
+                    <h1>Indian <span class="highlight">Crime</span> Analysis</h1>
+                </div>
+                <div class = "box3">
+                    <nav>
+                        <ul>
+                            <li> <a href="About.html">ABOUT</a> </li> 
+                            <li><a href="#section5">SERVICES</a> </li> 
+                            <li class="current"><a href="/home.html">HOME</a> </li>
+                        </ul>              
+                    </nav>
+                </div>
+            </header>
+        
         <section id="section8">
                 <div class="container">
                     <h1>ABOUT</h1>
