--- a/templates/vis.html
+++ b/templates/vis.html
@@ -40,14 +40,29 @@
 </section>
 
 <section id="section12">
-    <div class="container">
+    <center>
             <h1>VISUALIZATIONS</h1>
-            <a href="womenViz.html">
-                <h3>1) Total Crime on Women with respect to Population of an Area.</h3>
+   
+    <div style="width: 70%;" class="container">
+            
+            <a style="margin: 0;" href="womenViz.html">
+                <h2>1) State Comparisons For Crime Against Women</h2>
+            </a> 
+            <br>
+    </div>
+    <div style="width: 70%;" class="container">
+            <a href="childrenViz.html">
+                <h2>2) State Comparisons For Crime Against Children</h2>
+            </a> 
+            <br>
+    </div>
+    <div style="width: 70%;" class="container">
+            <a href="IPCViz.html">
+                <h2>3) State Comparisons For Crime Against Indian Penal Code(IPC)</h2>
             </a> 
     </div>
+</center>
 </section>
-        
 
     
 
